try to fix wrap

--- a/cart.css
+++ b/cart.css
@@ -8,6 +8,7 @@
     width: 100%;
     min-width: 212px;
     max-width: 250px;
+    flex-wrap: nowrap;
 }
 
 .card-img-top{
@@ -18,9 +19,11 @@
 .card-title{
     font-weight: bold;
     font-size: 2.1rem;
+    flex-wrap: nowrap;
 }
 .card-text{
     font-weight: bold;
+    flex-wrap: nowrap;
 }
 .container{
     box-sizing: border-box;
@@ -48,6 +51,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex-wrap: nowrap;
 }
 #price{
     text-align: center;
